# 2024-p4a-mpa-project-TTtie

./: .gitattributes  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cz/tttie/qalculate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cz/tttie/qalculate/: MainActivity.kt  QalcApplication.kt
app/src/main/java/cz/tttie/qalculate/db/: AppDatabase.kt  HistoryDao.kt  HistoryEntry.kt
app/src/main/java/cz/tttie/qalculate/ui/: AppScaffold.kt
app/src/main/java/cz/tttie/qalculate/ui/components/: CategorizedListing.kt  HistoryItem.kt
app/src/main/java/cz/tttie/qalculate/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/cz/tttie/qalculate/ui/utils/: LongPressButton.kt
app/src/main/java/cz/tttie/qalculate/ui/views/: AboutPage.kt  FunctionsPage.kt  HistoryPage.kt  MainPage.kt  SettingsPage.kt  VariablesPage.kt
app/src/main/java/cz/tttie/qalculate/ui/vm/: CalculatorViewModel.kt  CategoryViewModel.kt  HistoryPageViewModel.kt  SettingsPageViewModel.kt
app/src/main/java/cz/tttie/qalculate/util/: CategoryTree.kt
app/src/test/java/cz/tttie/qalculate/: ExampleUnitTest.kt
binding/: build.gradle.kts
binding/src/androidTest/java/cz/tttie/qalculate/binding/: ExampleInstrumentedTest.kt
binding/src/main/: .gitignore
binding/src/main/cpp/: CMakeLists.txt  binding.cpp  evaluation_options.cpp  evaluation_options.hpp  functions.cpp  functions.hpp  utils.cpp  utils.hpp  variables.cpp  variables.hpp
binding/src/main/cpp/include/: gmp.h  libintl.h
binding/src/main/cpp/include/libxml2/libxml/: xmlversion.h
binding/src/main/cpp/include/textstyle/: version.h
binding/src/main/java/cz/tttie/qalculate/binding/: CalculationResult.kt  CalculatorFunction.kt  CalculatorMessage.kt  CalculatorVariable.kt  MessageType.kt  Qalculate.kt
binding/src/main/java/cz/tttie/qalculate/binding/options/: EvaluationOptions.kt
binding/src/main/java/cz/tttie/qalculate/binding/options/evaluation/: ApproximationMode.kt  ExpressionColorization.kt  UnitConversion.kt
binding/src/test/java/cz/tttie/qalculate/binding/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
